--- a/static/css/style.css
+++ b/static/css/style.css
@@ -86,3 +86,10 @@ button {
     right: 10%;
     transform: translateY(-50%);
 }
+
+.music-list-item-index{
+    font-family: "Helvetica Neue", Helvetica, Arial, "PingFang SC", "Hiragino Sans GB", "Heiti SC", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
+    font-size: 20px;
+    font-style: italic;
+    color: darkolivegreen;
+}
